<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">patientInfoV5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name_login">请输入用户名！</string>
    <string name="hint_password_login">请输入密码！</string>
    <string name="btn_login_text">登录</string>
    <string name="title_cs">查询/删除</string>
    <string name="title_add">增加</string>
    <string name="title_update">修改</string>
    <string name="tv_cancel">退出</string>
    <string name="tv_setting">设置</string>
    <string name="ed_ip_input">请输入IP地址</string>
    <string name="btn_input">确定</string>
    <string name="lv_ip_title">IP：</string>
    <string name="frag_item_cs">请输入查询的参数</string>
    <string name="rb_Id">ID号</string>
    <string name="rb_name">姓名</string>
    <string name="btn_update">修改病人信息</string>
    <string name="tv_Id">ID号：</string>
    <string name="tv_Name">姓名：</string>
    <string name="tv_Age">年龄：</string>
    <string name="tv_Sex">性别：</string>
    <string name="tv_Man">男</string>
    <string name="tv_Woman">女</string>
    <string name="tv_Lxfs">联系方式：</string>
    <string name="tv_Brzz">病人症状：</string>
    <string name="tv_Yz">医嘱：</string>
    <string name="tv_Zybch">病床号：</string>
    <string name="tv_Hyzk">婚姻状况：</string>
    <string name="tv_Yh">已婚</string>
    <string name="tv_Wh">未婚</string>
    <string name="tv_Yxck">允许查看：</string>
    <string name="tv_Yes">是</string>
    <string name="tv_No">否</string>
    <string name="tv_Tssm">特殊说明：</string>
    <string name="tv_Shz">审核医生：</string>
    <string name="tv_Shtime">审核时间：</string>
    <string name="tv_Other">其他</string>
    <string name="tv_reget">重新获取</string>
    <string name="ad_ok">确定</string>
    <string name="ad_cancel">退出</string>
    <string name="tv_dqbd">读取备份</string>
    <string name="tv_sc">上传</string>
    <string name="btn_delete">删除病人信息</string>
    <string name="btn_reset">清空</string>
    <string name="btn_add">新增</string>
	<string name="btn_register">注册</string>
	<string name="tv_register_name">用户名：</string>
	<string name="ed_register_name">请输入用户名</string>
	<string name="tv_register_career">职业：</string>
	<string name="ed_register_carrer">请输入职业</string>
	<string name="tv_register_pass">密码：</string>
	<string name="ed_register_pass">请输入密码</string>
	<string name="tv_reinput_pass">密码验证：</string>
	<string name="ed_reinput_pass">再次输入密码</string>
	<string name="hint_number_login">请输入病案号！</string>
</resources>