<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/ll_img_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.my.imageview.CircleImageView
            android:id="@+id/img_startImg"
            android:layout_width="116dp"
            android:layout_height="110dp"
            android:background="@color/WHITE"
            android:scaleType="centerCrop"
            android:src="@drawable/password1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_img_layout"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/user" />
        
        <AutoCompleteTextView
            android:id="@+id/ed_name_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@android:drawable/edit_text"
            android:completionThreshold="1"
            android:hint="@string/hint_name_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_username_layout"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_state_change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/jiasuo" />
        
        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@android:drawable/edit_text"
            android:hint="@string/hint_password_login"
            android:inputType="textPassword" />
    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btnlayout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_password_layout"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           	android:layout_weight="1"
            android:background="@drawable/btn_login_style"
            android:text="@string/btn_register" />
        
        <View 
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_weight="0.02"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_style"
            android:text="@string/btn_login_text"
            android:layout_weight="1"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tv_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel_Id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/TOUMING"
            android:clickable="true"
            android:gravity="bottom|left"
            android:text="@string/tv_cancel"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/TOUMING" />

        <TextView
            android:id="@+id/tv_setting_Id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/TOUMING"
            android:clickable="true"
            android:gravity="bottom|right"
            android:text="@string/tv_setting"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>